<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/beijing"
                tools:context="com.hekr.android.app.SetActivity">

    <RelativeLayout
            android:id="@+id/stylebar"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#00000000"
            >
        <ImageView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="7dp"
                android:clickable="true"
                android:onClick="navBack"
                android:padding="10dp"
                android:textSize="20dp"
                android:src="@drawable/backicon"
                android:text="&#xf060;" />
        <TextView
                android:id="@+id/devicetype"
                android:textColor="#ffffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/set_title"
                android:textSize="20dp">

        </TextView>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/stylebar"
            android:orientation="vertical"
            android:weightSum="1">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.18"
                    android:layout_gravity="center"
                    android:gravity="center">
                <ImageView
                        android:id="@+id/circleImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:weightSum="1"
                    android:layout_marginLeft="40px"
                    android:layout_marginRight="40px"
                    android:orientation="vertical">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.25"
                            android:orientation="horizontal" >
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:text="@string/set_deviceName_tip"
                                    android:textColor="#ffffffff"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/deviceName"
                                    android:clickable="true"
                                    android:layout_toLeftOf="@+id/cominupdatename"
                                    android:layout_marginRight="5dp"
                                    android:layout_centerVertical="true"
                                    android:text="HEKR-01"
                                    android:textColor="#ffffffff"/>
                            <ImageView
                                    android:id="@+id/cominupdatename"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:background="@drawable/comin"
                                    android:clickable="true"/>

                            <View   android:layout_width="match_parent"
                                    android:layout_height="0.5dp"
                                    android:layout_alignParentBottom="true"
                                    android:background="#28ffffff">

                            </View>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.25">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/set_deviceBrand_tip"
                                android:textColor="#ffffffff"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/deviceBrand"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:text="B-LINK"
                                android:textColor="#ffffffff"/>
                            <View android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_alignParentBottom="true"
                                android:background="#28ffffff">

                        </View>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.25">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/set_deviceType_tip"
                                android:textColor="#ffffffff"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/deviceType"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:text="HEKR-01"
                                android:textColor="#ffffffff"/>
                            <View   android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_alignParentBottom="true"
                                android:background="#28ffffff">

                        </View>

                    </RelativeLayout>

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.25">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/set_firmwareVersion_tip"
                                android:textColor="#ffffffff"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/firmwareVersion"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:text="1.0.0.0"
                                android:textColor="#ffffffff"/>
                            <View   android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_alignParentBottom="true"
                                android:background="#28ffffff">

                        </View>

                    </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.42"
                    android:layout_marginRight="40px"
                    android:layout_marginLeft="40px"
                    android:id="@+id/bottom_button">
                    <TextView android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:gravity="center"
                            android:layout_above="@+id/update"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/control"
                            android:clickable="true"
                            android:text="@string/set_button_control"
                            android:textColor="#ffffffff"
                            android:background="#ff32bef2"/>
                    <TextView android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:id="@+id/update"
                        android:clickable="true"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/set_button_not_need_updateDevice"
                        android:textColor="#ffffffff"
                        android:background="#fff34141"
                        />
            </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
